--- a/IdentityServer/Views/Home/Index.cshtml
+++ b/IdentityServer/Views/Home/Index.cshtml
@@ -24,9 +24,7 @@
             Click <a href="~/grants">here</a> to manage your stored grants.
         </li>
         <li>
-            Here are links to the
-            <a href="https://github.com/identityserver/IdentityServer4">source code repository</a>,
-            and <a href="https://github.com/IdentityServer/IdentityServer4/tree/main/samples">ready to use samples</a>.
+            Click <a href="~/Identity/Account/Manage">here</a> to manage your account.
         </li>
     </ul>
 </div>
